refactor: remove unused helper methods in MigrationRecordService